CW-119 Add Swagger integration for bearer tokens
Bearer tokens are now included in the header of certain sensitive API endpoints.
